syntax = "proto3";

enum JobState {
  CREATED = 0;
  RUNNING = 1;
  STOPPED = 2;
  COMPLETED = 3;
  ERROR = 4;
}

message JobInfo {
  string id = 1;
  string command = 2;
  repeated string arguments = 3;
  
  int32 owner = 4;

  JobState state = 5;

  string error = 6;
}

message JobStartRequest {
  string command = 1;
  repeated string arguments = 2;
}

message JobStopRequest {
  string id = 1;
}

message JobQueryRequest {
  string id = 1;
}

message JobStreamOutput {
  bytes output = 1;
}

message JobStartOutput {
  string id = 1;
}

message JobStopOutput {
}

service JobRunnerService {
  rpc StartJob (JobStartRequest) returns (JobStartOutput);
  rpc StopJob (JobStopRequest) returns (JobStopOutput);
  rpc GetJobInfo (JobQueryRequest) returns (JobInfo);

  rpc StreamJobOutput (JobQueryRequest) returns (stream JobStreamOutput);
}
